{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Character",
            "id": "27ea1305-44e0-4f2d-847e-5790ba46330c",
            "actions": [
                {
                    "name": "Ability1",
                    "type": "Button",
                    "id": "94096bd0-6d63-413a-b025-6524d471f8ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability2",
                    "type": "Button",
                    "id": "7d6cc6dc-51ab-496c-a31f-1c806a6731be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability3",
                    "type": "Button",
                    "id": "a786b381-0393-4ab3-8fde-3c5350fa8c04",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5594d335-124a-4147-b1d4-dfeacfa1285d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d803c25-d6b3-4a7d-a71c-a509dc38fb3e",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95646a6b-9a15-4aa6-a66b-9f88cfeb115d",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "c367a7c1-8f76-44ef-a3b5-ada2ae32647e",
            "actions": [
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "604109af-e437-492d-ae9e-06aff3593bf7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8be99682-b631-4551-840b-23e3182c48bf",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}